fix: .home-name element spacing

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -31,12 +31,12 @@
     font-style: normal;
     font-weight: 100;
     justify-content: space-around;
-    left: -0.35em;
-    letter-spacing: 0.50em;
+    left: -0.42em;
+    letter-spacing: 0.5em;
     position: absolute;
     text-align: start;
-    top: calc(100% - 7.5vw);
-    width: 108%;
+    top: calc(100% - 7.25vw);
+    width: 108.75%;
     white-space: nowrap;
 
     span {
